--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ var week = new Date().getDay();
 if (week == 6 || week == 0){
 	var restaraunts = ["西芹炒肉", "豆角炒肉", "尖椒肉丝", "尖椒土豆炒肉丝","锅包肉", "炸茄子", "蒜蓉西兰花", "蒜苔炒肉","糖醋排骨", "可乐鸡翅", "胡萝卜玉米排骨汤", "蒜泥茄子"];   
 }else if(week%2 == 0){
-		var restaraunts = ["尖椒炒鸡蛋", "咖喱土豆", "凉拌土豆丝", "西兰花炒虾仁儿","蒸茄子", "金针菇炒肉", "蚝油生菜", "地三鲜","土豆丝炒肉", "豆角焖饭", "豆角炒肉", "酱茄子"];   
+	var restaraunts = ["尖椒炒鸡蛋", "咖喱土豆", "凉拌土豆丝", "西兰花炒虾仁儿","蒸茄子", "金针菇炒肉", "蚝油生菜", "地三鲜","土豆丝炒肉", "豆角焖饭", "豆角炒肉", "酱茄子"];   
 }else if(week%2 == 1){
-	var restaraunts = ["茄子焖土豆", "番茄炒西兰花", "酸辣土豆丝", "醋溜娃娃菜","西红柿鸡蛋", "炒茄子", "油泼金针菇", "清炒生菜","黄瓜炒鸡蛋", "酸奶拌香蕉"];   
+	var restaraunts = ["茄子焖土豆", "番茄炒西兰花", "酸辣土豆丝", "醋溜娃娃菜","西红柿鸡蛋", "炒茄子", "油泼金针菇", "清炒生菜","黄瓜炒鸡蛋", "酸奶拌香蕉","水果沙拉","阿田大虾"];   
 }
 
 var startAngle = 0;
